--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileProgFinal"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".RecyclerViewTest"
+            android:exported="false" />
+        <activity
+            android:name=".StorePage"
+            android:exported="false" />
         <activity
             android:name=".WarehousePage"
             android:exported="false" />
@@ -19,8 +25,8 @@
             android:name=".SalesPage"
             android:exported="false" />
         <activity
-            android:name=".FrontPage"
-            android:exported="true" >
+            android:name=".WarehouseRecyclerView"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".StorePage"
+            android:name=".FrontPage"
             android:exported="false" />
     </application>
 
