--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,22 @@
         android:theme="@style/Theme.MobileProgFinal"
         tools:targetApi="31">
         <activity
-            android:name=".RecyclerViewTest"
-            android:exported="false" />
-        <activity
             android:name=".StorePage"
             android:exported="false" />
         <activity
-            android:name=".WarehousePage"
+            android:name=".FrontPage"
+            android:exported="false" />
+        <activity
+            android:name=".UnusedWarehousePage"
             android:exported="false" />
         <activity
             android:name=".SalesPage"
             android:exported="false" />
         <activity
-            android:name=".WarehouseRecyclerView"
+            android:name=".UnusedStorePage"
+            android:exported="false" />
+        <activity
+            android:name=".WarehousePage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,9 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".FrontPage"
-            android:exported="false" />
+
     </application>
 
 </manifest>
